# MagiaStream

./: .gitignore  README.md  patch_scraper_dropdown.py  pyproject.toml  requirements.txt  test_search_debug.py  test_search_debug2.py  test_search_real.py
.github/workflows/: ci.yml
.playwright_profile/: Local State
.playwright_profile/Default/: .org.chromium.Chromium.VSuAFJ  .org.chromium.Chromium.Yq91Ql  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
.playwright_profile/Default/Cache/Cache_Data/: 018daca44ae4b0d7_0  02f00517152f84e1_0  034ecd9ce21efa10_0  0517145f71d3e16d_0  069c29f1b5616f6b_0  08cc59185a52e0b2_0  08f94f4a305acb40_0  09cd4844d0f781f3_0  0a61072f02816d78_0  0b35dc4f6e8db218_0  0c3acb78d79c1e83_0  0d669369311d8eee_0  0d6a775a436776c0_0  0e36fafb20554d28_0  0e67a700603e9a11_0  10b1e79986d4a4c8_0  11a051e951782c84_0  12aa494c52c6b414_0  14ca25a80f1d7a48_0  172d0a07486ad98f_0  196fb5a5c587a2ca_0  1b39e5ece8999a8c_0  1c77e11f22e7251f_0  1d5fea2f47c939c4_0  1e1a6372d0825740_0  21105fc6da456de7_0  218e67cb17a0544d_0  21d39b34f5992673_0  225b776508ca65c5_0  2432d81c77948584_0  2616bad27ef8b74a_0  2761b1cf58277340_0  278585fd261de8b7_0  27b1834958a4d1d2_0  28f5f2ed32ef85de_0  296768685e83750f_0  2a65cfd6cfc7c403_0  2f3f8f7016cfc170_0  (+161 more)
.playwright_profile/Default/DawnGraphiteCache/: data_1  index
.playwright_profile/Default/DawnWebGPUCache/: data_1  index
.playwright_profile/Default/Extension Rules/: LOG
.playwright_profile/Default/Extension Scripts/: LOG
.playwright_profile/Default/Extension State/: LOG  LOG.old
.playwright_profile/Default/GCM Store/: LOG  LOG.old
.playwright_profile/Default/GPUCache/: data_0  data_1  data_2  index
.playwright_profile/Default/Session Storage/: LOG  LOG.old
.playwright_profile/Default/Sessions/: Session_13429243542650312  Session_13429243554521696  Tabs_13429243542840033  Tabs_13429243554726987
.playwright_profile/Default/Site Characteristics Database/: LOG  LOG.old
.playwright_profile/Default/WebStorage/: QuotaManager
.playwright_profile/Default/shared_proto_db/: LOG  LOG.old
.playwright_profile/GraphiteDawnCache/: data_1  index
.playwright_profile/segmentation_platform/: ukm_db
docs/: PLAN_DEVELOPPEMENT.md
magia_stream/: __init__.py  browser.py  cache.py  cli.py  config.py  downloader.py  exceptions.py  models.py  scraper.py  utils.py
magia_stream/cli/: __init__.py  commands.py  ui.py  wizard.py
magia_stream/engine/: __init__.py  service.py
magia_stream/extractors/: __init__.py  base.py  registry.py  vidmoly.py
magia_stream/scrapers/: __init__.py  base.py  voiranime.py
scripts/: setup.sh
tests/: __init__.py  test_cli.py  test_config.py  test_scraper.py  test_scraper_browser_mock.py  test_utils.py
tools/: find_first_ep.py  find_first_ep_advanced.py  iframe_inspector.py  resolve_vidmoly.py
tools/scripts_debug/: patch_scraper.py  test_fetch_html.py  test_interactive.py  test_pw_search.py  test_search.py  test_search_debug2.py
voiranime_downloader/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  scraper.py  utils.py
(+106 files in other folders)
