[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magiastream"
version = "0.1.0"
description = "CLI modulaire et industriel pour l'orchestration et le téléchargement de flux HLS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.1"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0"
]

[project.scripts]
magia = "magia_stream.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["magia_stream"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
