[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magiastream"
version = "1.0.0"
description = "Un CLI industriel, résilient et interactif pour scraper et télécharger des flux HLS (animes/vidéos)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "dylankode", email = "ahouandjinougael733@gmail.com" }
] 
keywords = ["anime", "downloader", "hls", "cli", "playwright", "scraper", "magiastream"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video", 
]


dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.1",
    "playwright-stealth>=1.0.6"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0"
]

[project.scripts]
magia = "magia_stream.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["magia_stream"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[project.urls]
Homepage = "https://github.com/Dilane17/MagiaStream"
Repository = "https://github.com/Dilane17/MagiaStream.git"
"Bug Tracker" = "https://github.com/Dilane17/MagiaStream/issues"
